# kinect_mocap_studio

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  ex.txt  new_parallel.sh  parallel.sh  start_evaluate_grid.sh  start_evaluate_grid_parallel.sh
bench/: bench_output_NFOV_UNBINNED_OFF_30fps_113.mkv.json  bench_output_NFOV_UNBINNED_OFF_30fps_114.mkv.json  bench_output_NFOV_UNBINNED_OFF_30fps_117.mkv.json  bench_output_NFOV_UNBINNED_OFF_30fps_118.mkv.json  bench_output_NFOV_UNBINNED_OFF_30fps_120.mkv.json  bench_output_NFOV_UNBINNED_OFF_30fps_121.mkv.json  bench_output_NFOV_UNBINNED_OFF_30fps_122.mkv.json  bench_output_NFOV_UNBINNED_OFF_30fps_123.mkv.json
bench/once/: bench_output_NFOV_UNBINNED_OFF_30fps_113.mkv.json  bench_output_NFOV_UNBINNED_OFF_30fps_114.mkv.json  bench_output_NFOV_UNBINNED_OFF_30fps_117.mkv.json  bench_output_NFOV_UNBINNED_OFF_30fps_118.mkv.json  bench_output_NFOV_UNBINNED_OFF_30fps_120.mkv.json  bench_output_NFOV_UNBINNED_OFF_30fps_121.mkv.json  bench_output_NFOV_UNBINNED_OFF_30fps_122.mkv.json  bench_output_NFOV_UNBINNED_OFF_30fps_123.mkv.json
experiments/: b_s30001.json  b_s30002.json  b_s30003.json  b_s30004.json  b_s30005.json  b_s30006.json  s10001.json  s10002.json  s10003.json  s10004.json  s20001.json  s20002.json  s20003.json  s20004.json  s30001.json  s30002.json  s30003.json  s30004.json  s30005.json  s30006.json  sb_s30001.json  sb_s30002.json  sb_s30003.json  sb_s30004.json  sb_s30005.json  sb_s30006.json
floor_detector/: FloorDetector.cpp  FloorDetector.h  PointCloudGenerator.cpp  PointCloudGenerator.h
include/kinect_mocap_studio/: .gitignore  benchmark.hpp  cli.hpp  filter_utils.hpp  process.hpp  queues.hpp  utils.hpp  visualize.hpp
kinect_mocap_studio/src/: kinect_mocap_studio.cc
kinect_mocap_studio_clean/: CMakeLists.txt  Makefile  kinect_mocap_studioConfig.cmake
kinect_mocap_studio_clean/floor_detector/: CMakeLists.txt  Makefile
kinect_mocap_studio_clean/glfw/: Makefile
kinect_mocap_studio_clean/package/: Makefile  kinect_mocap_studioConfigVersion.cmake  libkinect_mocap_studio.so.1.4
kinect_mocap_studio_clean/package/floor_detector/: Makefile
kinect_mocap_studio_clean/package/glfw/: Makefile
kinect_mocap_studio_clean/package/glfw/src/: Makefile
kinect_mocap_studio_clean/package/glfw/src/src/: Makefile
kinect_mocap_studio_clean/package/window_controller_3d/: Makefile
kinect_mocap_studio_clean/sample_helper_includes/: .BodyTrackingHelpers.h.swp
kinect_mocap_studio_clean/src/: kinect_mocap_studio.cc
kinect_mocap_studio_clean/window_controller_3d/: Makefile
mocap_viewer_gui/: CMakeLists.txt  Makefile
mocap_viewer_gui/inc/: gui.h
mocap_viewer_gui/src/: gui.cpp  main.cpp
src/: baseline.cpp  benchmark.cpp  bup  cli.cpp  evaluate.cpp  kinect_mocap_studio.cc  kinect_mocap_studio.cpp  moving_average.cpp  plotting.cpp  process.cpp  utils.cpp  utils.hpp  visualize.cpp
window_controller_3d/: BosRenderer.cpp  BosRenderer.h  CMakeLists.txt  FloorRenderer.cpp  FloorRenderer.h  SimplePointCloudRenderer.cpp  SimplePointCloudRenderer.hpp  SimplePointCloudShaders.hpp  ViewControl.cpp  ViewControl.h  Window3dWrapper.cpp  Window3dWrapper.h  WindowController3d.cpp  WindowController3d.h
